pre refactor of top-bar in battle scene
pre refactor of top-bar in battle scene

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
   <head>
     <title>Pokemon - Star</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="font-family: Audiowide;"></div>
   </body>
 </html>
